sort.basic.lessons.sort.basic.bubble.AlgBubbleSort1.scala.error
AlgBubbleSort1:12: error: not found: value j
    if (plusPetit(j+1,j)){
                  ^AlgBubbleSort1:12: error: not found: value j
    if (plusPetit(j+1,j)){
                      ^